--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-REACT_APP_CANDY_MACHINE_ID=__PLACEHOLDER__
-REACT_APP_SOLANA_NETWORK=devnet
-REACT_APP_SOLANA_RPC_HOST=https://api.devnet.solana.com
+REACT_APP_CANDY_MACHINE_ID=8dnVyhDC5opM29VQmSUiR7MEsNoraz5TTRwJSJWQ3qFs
+REACT_APP_SOLANA_NETWORK=mainnet-beta
+REACT_APP_SOLANA_RPC_HOST=https://ssc-dao.genesysgo.net/
 
 
 # ADDITIONAL PARAMS TO SET IF USING SPL-TOKEN AS MINTING CURRENCY ONLY :
